TestSuite/errors/err0313.pas
type
  TStatic = static class
  end;

procedure P<T>();
  where T: TStatic;
begin
end;

begin
end.